cluster/apps/media/filegator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filegator-internal
  namespace: media
spec:
  ingressClassName: nginx-internal
  rules:
    - host: &host data.sparks.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filegator
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
      secretName: acme-crt-secret-sparks-codes
